--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="hero-content">
       <h1>AR Furniture</h1>
       <p>Lihat dan rasakan furniture langsung di rumahmu dengan teknologi AR!</p>
-      <a href="https://rajendriyawijaya.staging.8thwall.app/hci-project/" class="cta-button" target="_blank" rel="noopener noreferrer">Coba AR Sekarang</a>
+      <a href="https://rajendriyawijaya.8thwall.app/hci-project/" class="cta-button" target="_blank" rel="noopener noreferrer">Coba AR Sekarang</a>
     </div>
   </section>
 
@@ -155,9 +155,8 @@
       <li>Godwin Clief Fernando Mclay</li>
       <li>Rajendriya Agung Arya Wijaya</li>
     </ul>
-    <p>&copy; 2025 AR Furniture. All rights reserved.</p>
+    <p>&copy; 2025 AR Furniture.</p>
   </div>
 </footer>
-
 </body>
 </html>
