--- a/mahoni.html
+++ b/mahoni.html
@@ -274,58 +274,64 @@
 
     <!-- Header -->
     <header class="header">
-    <div class="container">
-      <div class="logo">
-        <h1>AR Furniture</h1>
-      </div>
-      <nav class="dropdown-nav">
-        <button class="dropdown-button" aria-expanded="false" aria-controls="dropdown-content">
-          <span>Menu</span>
-          <i class="fas fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content" id="dropdown-content" role="menu" aria-hidden="true">
-          <div class="dropdown-item" id="ensiklopedia-header" tabindex="0" aria-haspopup="true" aria-expanded="false">
-            Ensiklopedia
-            <i class="fas fa-caret-right" id="ensiklopedia-icon"></i>
-          </div>
-          <div class="dropdown-subcontent" id="ensiklopedia-content" role="menu" aria-label="Ensiklopedia submenu">
-            <div class="dropdown-item subcategory-header" tabindex="0" aria-haspopup="true" aria-expanded="false">
-              Sofa dan Kursi
-              <i class="fas fa-caret-right subcategory-icon"></i>
+        <div class="container">
+            <div class="logo">
+                <h1>Furniture Joss</h1>
             </div>
-            <div class="dropdown-subcontent subcategory-content">
-              <a href="katun.html" role="menuitem" tabindex="-1">Katun</a>
-              <a href="polyester.html" role="menuitem" tabindex="-1">Polyester</a>
-              <a href="kulitsintesis.html" role="menuitem" tabindex="-1">Kulit Sintesis</a>
-            </div>
-            
-            <div class="dropdown-item subcategory-header" tabindex="0" aria-haspopup="true" aria-expanded="false">
-              Meja dan Lemari
-              <i class="fas fa-caret-right subcategory-icon"></i>
-            </div>
-            <div class="dropdown-subcontent subcategory-content">
-              <a href="MDF.html" role="menuitem" tabindex="-1">MDF</a>
-              <a href="marmer.html" role="menuitem" tabindex="-1">Marmer</a>
-              <a href="particleboard.html" role="menuitem" tabindex="-1">Particle Board</a>
-              <a href="mahoni.html" role="menuitem" tabindex="-1">Mahoni</a>
-              <a href="jati.html" role="menuitem" tabindex="-1">Jati</a>
-            </div>
-            
-            <div class="dropdown-item subcategory-header" tabindex="0" aria-haspopup="true" aria-expanded="false">
-              Kasur - Springbed
-              <i class="fas fa-caret-right subcategory-icon"></i>
-            </div>
-            <div class="dropdown-subcontent subcategory-content">
-              <a href="springbed.html" role="menuitem" tabindex="-1">Springbed</a>
-            </div>
-          </div>
-          <div class="dropdown-item" style="cursor:pointer;" tabindex="0">
-            <a href="anggota.html" style="color:#8B5E3C; text-decoration:none;" role="menuitem">Anggota Kami</a>
-          </div>
+            <nav class="dropdown-nav">
+                <button class="dropdown-button" aria-expanded="false" aria-controls="dropdown-content">
+                    <span>Menu</span>
+                    <i class="fas fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content" id="dropdown-content" role="menu" aria-hidden="true">
+                    <div class="dropdown-item" id="ensiklopedia-header" tabindex="0" aria-haspopup="true"
+                        aria-expanded="false">
+                        Informasi Material
+                        <i class="fas fa-caret-right" id="ensiklopedia-icon"></i>
+                    </div>
+                    <div class="dropdown-subcontent" id="ensiklopedia-content" role="menu"
+                        aria-label="Ensiklopedia submenu">
+                        <div class="dropdown-item subcategory-header" tabindex="0" aria-haspopup="true"
+                            aria-expanded="false">
+                            Sofa dan Kursi
+                            <i class="fas fa-caret-right subcategory-icon"></i>
+                        </div>
+                        <div class="dropdown-subcontent subcategory-content">
+                            <a href="katun.html" role="menuitem" tabindex="-1">Katun</a>
+                            <a href="polyester.html" role="menuitem" tabindex="-1">Polyester</a>
+                            <a href="kulitsintesis.html" role="menuitem" tabindex="-1">Kulit Sintesis</a>
+                        </div>
+
+                        <div class="dropdown-item subcategory-header" tabindex="0" aria-haspopup="true"
+                            aria-expanded="false">
+                            Meja dan Lemari
+                            <i class="fas fa-caret-right subcategory-icon"></i>
+                        </div>
+                        <div class="dropdown-subcontent subcategory-content">
+                            <a href="MDF.html" role="menuitem" tabindex="-1">MDF</a>
+                            <a href="marmer.html" role="menuitem" tabindex="-1">Marmer</a>
+                            <a href="particleboard.html" role="menuitem" tabindex="-1">Particle Board</a>
+                            <a href="mahoni.html" role="menuitem" tabindex="-1">Mahoni</a>
+                            <a href="jati.html" role="menuitem" tabindex="-1">Jati</a>
+                        </div>
+
+                        <div class="dropdown-item subcategory-header" tabindex="0" aria-haspopup="true"
+                            aria-expanded="false">
+                            Kasur
+                            <i class="fas fa-caret-right subcategory-icon"></i>
+                        </div>
+                        <div class="dropdown-subcontent subcategory-content">
+                            <a href="springbed.html" role="menuitem" tabindex="-1">Springbed</a>
+                        </div>
+                    </div>
+                    <div class="dropdown-item" style="cursor:pointer;" tabindex="0">
+                        <a href="anggota.html" style="color:#8B5E3C; text-decoration:none;" role="menuitem">Anggota
+                            Kami</a>
+                    </div>
+                </div>
+            </nav>
         </div>
-      </nav>
-    </div>
-  </header>
+    </header>
 
     <!-- Content: Mahoni -->
     <main class="content-wrapper" role="main">
