--- a/marmer.html
+++ b/marmer.html
@@ -276,7 +276,7 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <h1>AR Furniture</h1>
+                <h1>Furniture Joss</h1>
             </div>
             <nav class="dropdown-nav">
                 <button class="dropdown-button" aria-expanded="false" aria-controls="dropdown-content">
@@ -286,7 +286,7 @@
                 <div class="dropdown-content" id="dropdown-content" role="menu" aria-hidden="true">
                     <div class="dropdown-item" id="ensiklopedia-header" tabindex="0" aria-haspopup="true"
                         aria-expanded="false">
-                        Ensiklopedia
+                        Informasi Material
                         <i class="fas fa-caret-right" id="ensiklopedia-icon"></i>
                     </div>
                     <div class="dropdown-subcontent" id="ensiklopedia-content" role="menu"
@@ -317,7 +317,7 @@
 
                         <div class="dropdown-item subcategory-header" tabindex="0" aria-haspopup="true"
                             aria-expanded="false">
-                            Kasur - Springbed
+                            Kasur
                             <i class="fas fa-caret-right subcategory-icon"></i>
                         </div>
                         <div class="dropdown-subcontent subcategory-content">
