--- a/anggota.html
+++ b/anggota.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Anggota Kami - AR Furniture</title>
+    <title>Anggota Kami - Furniture Joss</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -429,7 +429,7 @@
     <div class="main-content">
         <div class="team-title">
             <h1>Tim Kami</h1>
-            <p>Orang-orang kreatif di balik AR Furniture</p>
+            <p>Orang-orang kreatif di balik Furniture Joss</p>
         </div>
 
         <div class="team-container">
@@ -440,7 +440,7 @@
                 </div>
                 <div class="card-content">
                     <h3>Ivanna Putri Paramitha</h3>
-                    <p class="role">Coding AR</p>
+                    <p class="role">AR Developinng</p>
                 </div>
             </div>
 
